Fixed spacing issues with the timer label

--- a/src/cs221/GP01/main/resource/css/Game.css
+++ b/src/cs221/GP01/main/resource/css/Game.css
@@ -24,7 +24,7 @@
     -fx-pref-width: 600px;
     -fx-pref-height: 70px;
     -fx-alignment: center;
-    -fx-spacing: 180px;
+    -fx-spacing: 170px;
 }
 
 
@@ -32,6 +32,7 @@
     -fx-font-size: 48px;
     -fx-text-fill: white;
     -fx-font-family: DS-Digital;
+    -fx-pref-width: 120px;
 }
 
 .topMenu .scoreLabel{
